--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@ src="https://www.facebook.com/tr?id=1120155716761265&ev=PageView&noscript=1"
 
 	<div class="carousel-item active">
 
-					<img src="img/godrej_banner_1400x800_3.webp" class="d-none d-md-block" alt="Godrej Green reserve">
+					<img src="img/b1.webp" class="d-none d-md-block" alt="Godrej Green reserve">
 
-					<img src="img/godrej_banner_700x400_3 (1).webp" class="d-block d-md-none full-screen-img" alt="Godrej Green reserve">
+					<img src="img/m1.webp" class="d-block d-md-none full-screen-img" alt="Godrej Green reserve">
 
 				</div>
 
