--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ src="https://www.facebook.com/tr?id=1120155716761265&ev=PageView&noscript=1"
 
             <a class="navbar-brand" href="#">
 
-              <img loading="lazy" alt="Godrej IHP Yelahanka, Bangalore" src="./img/logo.e93e6fab.webp" alt="">
+              <img loading="lazy" alt="Godrej IHP Yelahanka, Bangalore" src="./img/GODREJ YELAHANKA LOGO .png" alt="">
 
 
 
