banner image  fix

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ src="https://www.facebook.com/tr?id=1120155716761265&ev=PageView&noscript=1"
 
 	<div class="carousel-item active">
 
-					<img src="img/godrej-yelahanka-banner.webp" class="d-none d-md-block" alt="Godrej Green reserve">
+					<img src="img/godrej-yelahanka-banner.webp" class="d-none d-md-block" style="width: 100%;" alt="Godrej Green reserve">
 
 					<img src="img/godrej-yelahanka-banner.webp" class="d-block d-md-none full-screen-img" alt="Godrej Green reserve">
 
@@ -742,7 +742,7 @@ src="https://www.facebook.com/tr?id=1120155716761265&ev=PageView&noscript=1"
 
         <strong>Price</strong>
 
-        <span>₹ 2.88 Cr*</span>
+        <span>₹ 2.7 Cr*</span>
 
       </div>
 
