mobile banner changed..

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ src="https://www.facebook.com/tr?id=1120155716761265&ev=PageView&noscript=1"
 
 					<img src="img/godrej-yelahanka-banner.webp" class="d-none d-md-block" style="width: 100%;" alt="Godrej Green reserve">
 
-					<img src="img/godrej-yelahanka-banner.webp" class="d-block d-md-none full-screen-img" alt="Godrej Green reserve">
+					<img src="img/IMG_1647.PNG" class="d-block d-md-none full-screen-img" alt="Godrej Green reserve">
 
 				</div>
 
